feat: update shortenurl API documentation and add /v1/shorten endpoint
- Update contact information in `adapter/shortenurl/api/docs/docs.go`
- Add `/v1/shorten` endpoint in `adapter/shortenurl/api/docs/docs.go`
- Update contact information in `adapter/shortenurl/api/docs/swagger.json`
- Update contact information in `adapter/shortenurl/api/docs/swagger.yaml`
- Add `/v1/shorten` endpoint in `adapter/shortenurl/api/docs/swagger.yaml`
- Add `PostURL` function in `adapter/shortenurl/cmd/restful/v1/shorten/api.go`
- Update API information in `adapter/shortenurl/main.go`
